distribuição de frequências qualitativas - método 1

--- a/notebook/curso-de-estatistica-parte-1.ipynb
+++ b/notebook/curso-de-estatistica-parte-1.ipynb
@@ -562,7 +562,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 20,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -577,7 +577,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "De 1.339244614 até 2.028496765 anos\n"
+      "De 1.339244614 até 2.028496765 metros\n"
      ]
     }
    ],
@@ -601,7 +601,6 @@
    "metadata": {
     "colab_type": "text",
     "id": "PNIg_4VEjQK_",
-    "jp-MarkdownHeadingCollapsed": true,
     "tags": []
    },
    "source": [
@@ -616,7 +615,6 @@
    "metadata": {
     "colab_type": "text",
     "id": "JhpyjkEFjQLA",
-    "jp-MarkdownHeadingCollapsed": true,
     "tags": []
    },
    "source": [
@@ -646,7 +644,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -656,12 +654,27 @@
     "id": "cA4gUboZjQLB",
     "outputId": "960bc58d-62e2-4ca2-bb6d-df888813cb34"
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0    53250\n",
+       "1    23590\n",
+       "Name: Sexo, dtype: int64"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dados['Sexo'].value_counts()"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -671,45 +684,66 @@
     "id": "iy4-ijknjQLD",
     "outputId": "609cb9bf-45b6-4d6a-ab57-f7eee496a41b"
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0    69.299844\n",
+       "1    30.700156\n",
+       "Name: Sexo, dtype: float64"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dados['Sexo'].value_counts(normalize = True) * 100"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {
     "colab": {},
     "colab_type": "code",
     "id": "qfkiLcFijQLG"
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "frequencia = dados['Sexo'].value_counts()"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {
     "colab": {},
     "colab_type": "code",
     "id": "t4uFMt6fjQLI"
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "percentual = dados['Sexo'].value_counts(normalize = True) * 100"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "metadata": {
     "colab": {},
     "colab_type": "code",
     "id": "zUGfju86jQLM"
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "dist_freq_qualitativas = pd.DataFrame({'Frequência' : frequencia, 'Porcentagem (%)' : percentual})"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -719,23 +753,79 @@
     "id": "kPOYfijijQLO",
     "outputId": "4af843fe-2772-4fc7-a04c-6e50d2384b58"
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Frequência</th>\n",
+       "      <th>Porcentagem (%)</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>53250</td>\n",
+       "      <td>69.299844</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>23590</td>\n",
+       "      <td>30.700156</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   Frequência  Porcentagem (%)\n",
+       "0       53250        69.299844\n",
+       "1       23590        30.700156"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dist_freq_qualitativas"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "metadata": {
     "colab": {},
     "colab_type": "code",
     "id": "tMS-VSk3jQLQ"
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "dist_freq_qualitativas.rename(index = {0 : 'Masculino', 1 : 'Feminino'}, inplace = True)\n",
+    "dist_freq_qualitativas.rename_axis('Sexo', axis = 'columns', inplace = True) "
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -745,8 +835,61 @@
     "id": "B9zkYdcCyHe6",
     "outputId": "870e3f1e-498f-47f2-f9c7-30f748d0870a"
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th>Sexo</th>\n",
+       "      <th>Frequência</th>\n",
+       "      <th>Porcentagem (%)</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>Masculino</th>\n",
+       "      <td>53250</td>\n",
+       "      <td>69.299844</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Feminino</th>\n",
+       "      <td>23590</td>\n",
+       "      <td>30.700156</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "Sexo       Frequência  Porcentagem (%)\n",
+       "Masculino       53250        69.299844\n",
+       "Feminino        23590        30.700156"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dist_freq_qualitativas"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -828,7 +971,8 @@
    "cell_type": "markdown",
    "metadata": {
     "colab_type": "text",
-    "id": "eaXQUxnXjQLa"
+    "id": "eaXQUxnXjQLa",
+    "tags": []
    },
    "source": [
     "## <font color=green>2.2 Distribuição de frequências para variáveis quantitativas (classes personalizadas)</font>\n",
