--- a/notebook/curso-de-estatistica-parte-1.ipynb
+++ b/notebook/curso-de-estatistica-parte-1.ipynb
@@ -913,18 +913,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 34,
    "metadata": {
     "colab": {},
     "colab_type": "code",
     "id": "d8XMZiEfjQLS"
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "sexo = {0: 'Masculino',\n",
+    "        1: 'Feminino'}\n",
+    "\n",
+    "cor = {0: 'Indígena',\n",
+    "       2: 'Branca',\n",
+    "       4: 'Preta',\n",
+    "       6: 'Amarela',\n",
+    "       8: 'Parda',\n",
+    "       9: 'Sem declaração'}"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 37,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -934,12 +944,87 @@
     "id": "YLCyOKYcjQLU",
     "outputId": "7edebb2b-4a25-4b77-f78a-f47adbc8b3d9"
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th>Cor</th>\n",
+       "      <th>Indígena</th>\n",
+       "      <th>Branca</th>\n",
+       "      <th>Preta</th>\n",
+       "      <th>Amarela</th>\n",
+       "      <th>Parda</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Sexo</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>Masculino</th>\n",
+       "      <td>256</td>\n",
+       "      <td>22194</td>\n",
+       "      <td>5502</td>\n",
+       "      <td>235</td>\n",
+       "      <td>25063</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Feminino</th>\n",
+       "      <td>101</td>\n",
+       "      <td>9621</td>\n",
+       "      <td>2889</td>\n",
+       "      <td>117</td>\n",
+       "      <td>10862</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "Cor        Indígena  Branca  Preta  Amarela  Parda\n",
+       "Sexo                                              \n",
+       "Masculino       256   22194   5502      235  25063\n",
+       "Feminino        101    9621   2889      117  10862"
+      ]
+     },
+     "execution_count": 37,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "frequencia = pd.crosstab(dados.Sexo,\n",
+    "                         dados.Cor)\n",
+    "frequencia.rename(index = sexo, inplace = True)\n",
+    "frequencia.rename(columns = cor, inplace = True)\n",
+    "frequencia"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 38,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -949,8 +1034,84 @@
     "id": "nrDtcf5gjQLV",
     "outputId": "6138e377-ca89-4606-8f22-084729b89637"
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th>Cor</th>\n",
+       "      <th>Indígena</th>\n",
+       "      <th>Branca</th>\n",
+       "      <th>Preta</th>\n",
+       "      <th>Amarela</th>\n",
+       "      <th>Parda</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Sexo</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>Masculino</th>\n",
+       "      <td>0.333160</td>\n",
+       "      <td>28.883394</td>\n",
+       "      <td>7.160333</td>\n",
+       "      <td>0.305830</td>\n",
+       "      <td>32.617126</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Feminino</th>\n",
+       "      <td>0.131442</td>\n",
+       "      <td>12.520822</td>\n",
+       "      <td>3.759761</td>\n",
+       "      <td>0.152264</td>\n",
+       "      <td>14.135867</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "Cor        Indígena     Branca     Preta   Amarela      Parda\n",
+       "Sexo                                                         \n",
+       "Masculino  0.333160  28.883394  7.160333  0.305830  32.617126\n",
+       "Feminino   0.131442  12.520822  3.759761  0.152264  14.135867"
+      ]
+     },
+     "execution_count": 38,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "percentual = pd.crosstab(dados.Sexo,\n",
+    "                         dados.Cor,\n",
+    "                        normalize = True) * 100\n",
+    "percentual.rename(index = sexo, inplace = True)\n",
+    "percentual.rename(columns = cor, inplace = True)\n",
+    "percentual"
+   ]
   },
   {
    "cell_type": "code",
@@ -965,7 +1126,15 @@
     "outputId": "d2674b4f-214e-4b08-de79-13e443d41d41"
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "percentual = pd.crosstab(dados.Sexo,\n",
+    "                         dados.Cor,\n",
+    "                        aggfunc = 'mean',\n",
+    "                        values = dados.Renda)\n",
+    "percentual.rename(index = sexo, inplace = True)\n",
+    "percentual.rename(columns = cor, inplace = True)\n",
+    "percentual"
+   ]
   },
   {
    "cell_type": "markdown",
