distribuição de frequências quantitativas - classes personalizadas

--- a/notebook/curso-de-estatistica-parte-1.ipynb
+++ b/notebook/curso-de-estatistica-parte-1.ipynb
@@ -1115,7 +1115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 40,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -1125,7 +1125,76 @@
     "id": "_MHwBGcdp6dl",
     "outputId": "d2674b4f-214e-4b08-de79-13e443d41d41"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th>Cor</th>\n",
+       "      <th>Indígena</th>\n",
+       "      <th>Branca</th>\n",
+       "      <th>Preta</th>\n",
+       "      <th>Amarela</th>\n",
+       "      <th>Parda</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Sexo</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>Masculino</th>\n",
+       "      <td>1081.710938</td>\n",
+       "      <td>2925.744435</td>\n",
+       "      <td>1603.861687</td>\n",
+       "      <td>4758.251064</td>\n",
+       "      <td>1659.577425</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Feminino</th>\n",
+       "      <td>2464.386139</td>\n",
+       "      <td>2109.866750</td>\n",
+       "      <td>1134.596400</td>\n",
+       "      <td>3027.341880</td>\n",
+       "      <td>1176.758516</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "Cor           Indígena       Branca        Preta      Amarela        Parda\n",
+       "Sexo                                                                      \n",
+       "Masculino  1081.710938  2925.744435  1603.861687  4758.251064  1659.577425\n",
+       "Feminino   2464.386139  2109.866750  1134.596400  3027.341880  1176.758516"
+      ]
+     },
+     "execution_count": 40,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "percentual = pd.crosstab(dados.Sexo,\n",
     "                         dados.Cor,\n",
@@ -1152,7 +1221,8 @@
    "cell_type": "markdown",
    "metadata": {
     "colab_type": "text",
-    "id": "wxsSD-VVjQLb"
+    "id": "wxsSD-VVjQLb",
+    "tags": []
    },
    "source": [
     "### Passo 1 - Especificar os limites de cada classe\n",
@@ -1184,7 +1254,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 41,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -1194,12 +1264,25 @@
     "id": "Z08790GUjQLc",
     "outputId": "4a7bafb3-8440-42ee-fc60-a29080527059"
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 41,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dados.Renda.min()"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 42,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -1209,30 +1292,47 @@
     "id": "5q2V5-0FjQLe",
     "outputId": "4d3c65eb-f1b0-454d-eb93-09c82314e311"
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "200000"
+      ]
+     },
+     "execution_count": 42,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dados.Renda.max()"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 43,
    "metadata": {
     "colab": {},
     "colab_type": "code",
     "id": "Qt5F5w2UjQLg"
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "classes = [0, 1576, 3152, 7880, 15760, 200000]"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 47,
    "metadata": {
     "colab": {},
     "colab_type": "code",
     "id": "DKPIGOLLjQLi"
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "labels = ['E', 'D', 'C', 'B', 'A']"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -1256,7 +1356,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 51,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -1266,12 +1366,36 @@
     "id": "N-wZ_2UajQLm",
     "outputId": "62245a56-ed43-4344-d2fa-bbad51c61c55"
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "E    49755\n",
+       "D    16700\n",
+       "C     7599\n",
+       "B     2178\n",
+       "A      608\n",
+       "Name: Renda, dtype: int64"
+      ]
+     },
+     "execution_count": 51,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "frequencia = pd.value_counts(\n",
+    "    pd.cut(x = dados.Renda,\n",
+    "           bins = classes,\n",
+    "           labels = labels,\n",
+    "           include_lowest = True)\n",
+    ")\n",
+    "frequencia"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 54,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -1281,12 +1405,37 @@
     "id": "WrZ2m2GajQLo",
     "outputId": "363ba010-04c1-4f23-a08a-f5431372fcf4"
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "E    0.647514\n",
+       "D    0.217335\n",
+       "C    0.098894\n",
+       "B    0.028345\n",
+       "A    0.007913\n",
+       "Name: Renda, dtype: float64"
+      ]
+     },
+     "execution_count": 54,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "percentual = pd.value_counts(\n",
+    "    pd.cut(x = dados.Renda,\n",
+    "           bins = classes,\n",
+    "           labels = labels,\n",
+    "           include_lowest = True),\n",
+    "    normalize = True\n",
+    ")\n",
+    "percentual"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 56,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -1296,12 +1445,86 @@
     "id": "btKoxJDujQLp",
     "outputId": "849e9644-dcf1-4c0f-88c8-9bd00f24a53b"
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Frequência</th>\n",
+       "      <th>Porcentagem (%)</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>E</th>\n",
+       "      <td>49755</td>\n",
+       "      <td>0.647514</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>D</th>\n",
+       "      <td>16700</td>\n",
+       "      <td>0.217335</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>C</th>\n",
+       "      <td>7599</td>\n",
+       "      <td>0.098894</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>B</th>\n",
+       "      <td>2178</td>\n",
+       "      <td>0.028345</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>A</th>\n",
+       "      <td>608</td>\n",
+       "      <td>0.007913</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   Frequência  Porcentagem (%)\n",
+       "E       49755         0.647514\n",
+       "D       16700         0.217335\n",
+       "C        7599         0.098894\n",
+       "B        2178         0.028345\n",
+       "A         608         0.007913"
+      ]
+     },
+     "execution_count": 56,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dist_freq_quantitativas_personalizadas = pd.DataFrame(\n",
+    "    {'Frequência': frequencia, 'Porcentagem (%)': percentual}\n",
+    ")\n",
+    "dist_freq_quantitativas_personalizadas"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 57,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -1311,8 +1534,79 @@
     "id": "uTMEJXUHjQLs",
     "outputId": "ce17e408-9d56-44b2-fb26-a4037df3af00"
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Frequência</th>\n",
+       "      <th>Porcentagem (%)</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>A</th>\n",
+       "      <td>608</td>\n",
+       "      <td>0.007913</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>B</th>\n",
+       "      <td>2178</td>\n",
+       "      <td>0.028345</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>C</th>\n",
+       "      <td>7599</td>\n",
+       "      <td>0.098894</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>D</th>\n",
+       "      <td>16700</td>\n",
+       "      <td>0.217335</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>E</th>\n",
+       "      <td>49755</td>\n",
+       "      <td>0.647514</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   Frequência  Porcentagem (%)\n",
+       "A         608         0.007913\n",
+       "B        2178         0.028345\n",
+       "C        7599         0.098894\n",
+       "D       16700         0.217335\n",
+       "E       49755         0.647514"
+      ]
+     },
+     "execution_count": 57,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dist_freq_quantitativas_personalizadas.sort_index(ascending = False)"
+   ]
   },
   {
    "cell_type": "markdown",
