--- a/notebook/curso-de-estatistica-parte-1.ipynb
+++ b/notebook/curso-de-estatistica-parte-1.ipynb
@@ -17,6 +17,7 @@
    "metadata": {
     "colab_type": "text",
     "id": "cVgsZ_E3jQKg",
+    "jp-MarkdownHeadingCollapsed": true,
     "tags": []
    },
    "source": [
@@ -601,6 +602,7 @@
    "metadata": {
     "colab_type": "text",
     "id": "PNIg_4VEjQK_",
+    "jp-MarkdownHeadingCollapsed": true,
     "tags": []
    },
    "source": [
@@ -2329,7 +2331,6 @@
    "metadata": {
     "colab_type": "text",
     "id": "uIb17Es3jQMP",
-    "jp-MarkdownHeadingCollapsed": true,
     "tags": []
    },
    "source": [
@@ -2342,7 +2343,6 @@
    "metadata": {
     "colab_type": "text",
     "id": "Wrya4suEX7H-",
-    "jp-MarkdownHeadingCollapsed": true,
     "tags": []
    },
    "source": [
@@ -2351,7 +2351,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 69,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -2361,8 +2361,110 @@
     "id": "jj7a21flX7H_",
     "outputId": "772a6f47-ed2a-4d49-9db0-bd0944270891"
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th>Matérias</th>\n",
+       "      <th>Fulano</th>\n",
+       "      <th>Beltrano</th>\n",
+       "      <th>Sicrano</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>Matemática</th>\n",
+       "      <td>8</td>\n",
+       "      <td>10.0</td>\n",
+       "      <td>7.5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Português</th>\n",
+       "      <td>10</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>8.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Inglês</th>\n",
+       "      <td>4</td>\n",
+       "      <td>0.5</td>\n",
+       "      <td>7.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Geografia</th>\n",
+       "      <td>8</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>8.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>História</th>\n",
+       "      <td>6</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>8.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Física</th>\n",
+       "      <td>10</td>\n",
+       "      <td>9.5</td>\n",
+       "      <td>8.5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Química</th>\n",
+       "      <td>8</td>\n",
+       "      <td>10.0</td>\n",
+       "      <td>7.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "Matérias    Fulano  Beltrano  Sicrano\n",
+       "Matemática       8      10.0      7.5\n",
+       "Português       10       2.0      8.0\n",
+       "Inglês           4       0.5      7.0\n",
+       "Geografia        8       1.0      8.0\n",
+       "História         6       3.0      8.0\n",
+       "Física          10       9.5      8.5\n",
+       "Química          8      10.0      7.0"
+      ]
+     },
+     "execution_count": 69,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df = pd.DataFrame(data = {'Fulano': [8, 10, 4, 8, 6, 10, 8],\n",
+    "                          'Beltrano': [10, 2, 0.5, 1, 3, 9.5, 10],\n",
+    "                          'Sicrano': [7.5, 8, 7, 8, 8, 8.5, 7]},\n",
+    "                  index = ['Matemática',\n",
+    "                           'Português',\n",
+    "                           'Inglês',\n",
+    "                           'Geografia',\n",
+    "                           'História',\n",
+    "                           'Física',\n",
+    "                           'Química'])\n",
+    "df.rename_axis('Matérias', axis = 'columns', inplace = True)\n",
+    "df                       "
+   ]
   },
   {
    "cell_type": "markdown",
@@ -2387,7 +2489,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 70,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -2397,12 +2499,25 @@
     "id": "QW4JPcBmX7IA",
     "outputId": "45810cfa-fba2-4bf3-b571-eddd9d8ebd09"
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "7.714285714285714"
+      ]
+     },
+     "execution_count": 70,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "(8 + 10 + 4 + 8 + 6 + 10 + 8) / 7"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 71,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -2412,12 +2527,25 @@
     "id": "LuT8WNy5X7IB",
     "outputId": "1fde4b44-b250-41d9-ff02-70c9a0e05aca"
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "7.714285714285714"
+      ]
+     },
+     "execution_count": 71,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df['Fulano'].mean()"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 72,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -2427,12 +2555,25 @@
     "id": "BRMZcmMEjQMQ",
     "outputId": "5f3334d9-0f5f-40e2-e2b7-191e0bc3a5d6"
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2000.3831988547631"
+      ]
+     },
+     "execution_count": 72,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dados.Renda.mean()"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 74,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -2442,8 +2583,83 @@
     "id": "CGgJbsK0HBQc",
     "outputId": "35b8a334-5f7d-4f17-ec85-2e10ec6ae5ab"
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>UF</th>\n",
+       "      <th>Idade</th>\n",
+       "      <th>Cor</th>\n",
+       "      <th>Anos de Estudo</th>\n",
+       "      <th>Renda</th>\n",
+       "      <th>Altura</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Sexo</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>31.901991</td>\n",
+       "      <td>44.046554</td>\n",
+       "      <td>5.038685</td>\n",
+       "      <td>9.120169</td>\n",
+       "      <td>2192.441596</td>\n",
+       "      <td>1.699443</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>31.937728</td>\n",
+       "      <td>44.127554</td>\n",
+       "      <td>5.018906</td>\n",
+       "      <td>10.258584</td>\n",
+       "      <td>1566.847393</td>\n",
+       "      <td>1.699670</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "             UF      Idade       Cor  Anos de Estudo        Renda    Altura\n",
+       "Sexo                                                                       \n",
+       "0     31.901991  44.046554  5.038685        9.120169  2192.441596  1.699443\n",
+       "1     31.937728  44.127554  5.018906       10.258584  1566.847393  1.699670"
+      ]
+     },
+     "execution_count": 74,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dados.groupby(['Sexo'])['Renda'].mean()"
+   ]
   },
   {
    "cell_type": "markdown",
