--- a/notebook/curso-de-estatistica-parte-1.ipynb
+++ b/notebook/curso-de-estatistica-parte-1.ipynb
@@ -2573,7 +2573,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 75,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -2586,73 +2586,14 @@
    "outputs": [
     {
      "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>UF</th>\n",
-       "      <th>Idade</th>\n",
-       "      <th>Cor</th>\n",
-       "      <th>Anos de Estudo</th>\n",
-       "      <th>Renda</th>\n",
-       "      <th>Altura</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Sexo</th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>31.901991</td>\n",
-       "      <td>44.046554</td>\n",
-       "      <td>5.038685</td>\n",
-       "      <td>9.120169</td>\n",
-       "      <td>2192.441596</td>\n",
-       "      <td>1.699443</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>31.937728</td>\n",
-       "      <td>44.127554</td>\n",
-       "      <td>5.018906</td>\n",
-       "      <td>10.258584</td>\n",
-       "      <td>1566.847393</td>\n",
-       "      <td>1.699670</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
       "text/plain": [
-       "             UF      Idade       Cor  Anos de Estudo        Renda    Altura\n",
-       "Sexo                                                                       \n",
-       "0     31.901991  44.046554  5.038685        9.120169  2192.441596  1.699443\n",
-       "1     31.937728  44.127554  5.018906       10.258584  1566.847393  1.699670"
+       "Sexo\n",
+       "0    2192.441596\n",
+       "1    1566.847393\n",
+       "Name: Renda, dtype: float64"
       ]
      },
-     "execution_count": 74,
+     "execution_count": 75,
      "metadata": {},
      "output_type": "execute_result"
     }
