--- a/notebook/exercicios.ipynb
+++ b/notebook/exercicios.ipynb
@@ -131,25 +131,63 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\ciana\\AppData\\Local\\Temp/ipykernel_15380/1799472221.py:1: FutureWarning: Dropping of nuisance columns in DataFrame reductions (with 'numeric_only=None') is deprecated; in a future version this will raise TypeError.  Select only valid columns before calling the reduction.\n",
+      "  dataset.mean()\n"
+     ]
+    },
+    {
      "data": {
       "text/plain": [
-       "Sexo\n",
-       "H    45.75\n",
-       "M    46.33\n",
-       "Name: Idade, dtype: float64"
+       "Idade    46.1\n",
+       "dtype: float64"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "dataset.mean()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "tags": []
+   },
+   "source": [
+    "## Média por categoria "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Sexo\n",
+       "H    45.750000\n",
+       "M    46.333333\n",
+       "Name: Idade, dtype: float64"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dataset.groupby(['Sexo']).mean().loc['H']"
    ]
   }
  ],
