cálculo de média por categoria

--- a/notebook/exercicios.ipynb
+++ b/notebook/exercicios.ipynb
@@ -169,19 +169,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "Sexo\n",
-       "H    45.750000\n",
-       "M    46.333333\n",
-       "Name: Idade, dtype: float64"
+       "Idade    45.75\n",
+       "Name: H, dtype: float64"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
