--- a/notebook/curso-de-estatistica-parte-1.ipynb
+++ b/notebook/curso-de-estatistica-parte-1.ipynb
@@ -2470,7 +2470,9 @@
    "cell_type": "markdown",
    "metadata": {
     "colab_type": "text",
-    "id": "kcHJFW-YjQMP"
+    "id": "kcHJFW-YjQMP",
+    "jp-MarkdownHeadingCollapsed": true,
+    "tags": []
    },
    "source": [
     "## <font color=green>3.1 Média aritmética</font>\n",
@@ -2655,7 +2657,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 76,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -2665,12 +2667,33 @@
     "id": "3dXjdRFlX7IH",
     "outputId": "d032eb05-bd06-4c1f-817d-f19abedb42bc"
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Matemática     8\n",
+       "Português     10\n",
+       "Inglês         4\n",
+       "Geografia      8\n",
+       "História       6\n",
+       "Física        10\n",
+       "Química        8\n",
+       "Name: Fulano, dtype: int64"
+      ]
+     },
+     "execution_count": 76,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "notas_fulano = df.Fulano\n",
+    "notas_fulano"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 77,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -2680,12 +2703,33 @@
     "id": "cU91DJ-yjQMV",
     "outputId": "928ea4b6-51e4-433e-9140-412596b3b42a"
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Inglês         4\n",
+       "História       6\n",
+       "Matemática     8\n",
+       "Geografia      8\n",
+       "Química        8\n",
+       "Português     10\n",
+       "Física        10\n",
+       "Name: Fulano, dtype: int64"
+      ]
+     },
+     "execution_count": 77,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "notas_fulano = notas_fulano.sort_values()\n",
+    "notas_fulano"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 78,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -2695,12 +2739,96 @@
     "id": "z9bOnYKf1NOd",
     "outputId": "a1d69cc0-145e-4ec9-9504-32b220cf4e5c"
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>index</th>\n",
+       "      <th>Fulano</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Inglês</td>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>História</td>\n",
+       "      <td>6</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Matemática</td>\n",
+       "      <td>8</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Geografia</td>\n",
+       "      <td>8</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Química</td>\n",
+       "      <td>8</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>Português</td>\n",
+       "      <td>10</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>Física</td>\n",
+       "      <td>10</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "        index  Fulano\n",
+       "0      Inglês       4\n",
+       "1    História       6\n",
+       "2  Matemática       8\n",
+       "3   Geografia       8\n",
+       "4     Química       8\n",
+       "5   Português      10\n",
+       "6      Física      10"
+      ]
+     },
+     "execution_count": 78,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "notas_fulano = notas_fulano.reset_index()\n",
+    "notas_fulano"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 79,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -2710,12 +2838,26 @@
     "id": "u3nfPEFjjQMW",
     "outputId": "a683f234-d732-4dc0-9e3e-eac66a6f904d"
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "7"
+      ]
+     },
+     "execution_count": 79,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "n = notas_fulano.shape[0]\n",
+    "n"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 80,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -2725,12 +2867,26 @@
     "id": "trC12MHxjQMY",
     "outputId": "917c6720-daa2-45be-a72d-3e0d63c67fd0"
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "4.0"
+      ]
+     },
+     "execution_count": 80,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "elemento_md = (n + 1) / 2 \n",
+    "elemento_md"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 81,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -2740,12 +2896,27 @@
     "id": "NKccffcLjQMZ",
     "outputId": "46c1c33a-100b-4aca-e876-f3589b699b48"
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "index     Geografia\n",
+       "Fulano            8\n",
+       "Name: 3, dtype: object"
+      ]
+     },
+     "execution_count": 81,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "notas_fulano.loc[elemento_md - 1]"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 82,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -2755,8 +2926,30 @@
     "id": "ody5mfXLjQMb",
     "outputId": "d43b24b8-1d80-4780-a059-720cdc073353"
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\ciana\\AppData\\Local\\Temp/ipykernel_19452/2460163259.py:1: FutureWarning: Dropping of nuisance columns in DataFrame reductions (with 'numeric_only=None') is deprecated; in a future version this will raise TypeError.  Select only valid columns before calling the reduction.\n",
+      "  notas_fulano.median()\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "Fulano    8.0\n",
+       "dtype: float64"
+      ]
+     },
+     "execution_count": 82,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "notas_fulano.median()"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -2772,7 +2965,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 111,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -2782,12 +2975,32 @@
     "id": "Jkx1WZenjQMe",
     "outputId": "2482f6a4-b2c1-4751-865c-827ac57bba01"
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Matemática    10.0\n",
+       "Inglês         0.5\n",
+       "Física         9.5\n",
+       "História       3.0\n",
+       "Química       10.0\n",
+       "Português      2.0\n",
+       "Name: Beltrano, dtype: float64"
+      ]
+     },
+     "execution_count": 111,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "notas_beltrano = df.Beltrano.sample(6, random_state = 101)\n",
+    "notas_beltrano"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 112,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -2797,12 +3010,32 @@
     "id": "D1LUpvZkYsHq",
     "outputId": "d23d2d1c-bf17-4273-c441-092e04ec1ea8"
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Inglês         0.5\n",
+       "Português      2.0\n",
+       "História       3.0\n",
+       "Física         9.5\n",
+       "Matemática    10.0\n",
+       "Química       10.0\n",
+       "Name: Beltrano, dtype: float64"
+      ]
+     },
+     "execution_count": 112,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "notas_beltrano = notas_beltrano.sort_values()\n",
+    "notas_beltrano"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 100,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -2812,12 +3045,97 @@
     "id": "PuiScCf0-vh9",
     "outputId": "569288f3-b67d-4932-91cb-8c66685163c6"
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>level_0</th>\n",
+       "      <th>index</th>\n",
+       "      <th>Beltrano</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0</td>\n",
+       "      <td>Inglês</td>\n",
+       "      <td>0.5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1</td>\n",
+       "      <td>Português</td>\n",
+       "      <td>2.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2</td>\n",
+       "      <td>História</td>\n",
+       "      <td>3.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>3</td>\n",
+       "      <td>Física</td>\n",
+       "      <td>9.5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>4</td>\n",
+       "      <td>Matemática</td>\n",
+       "      <td>10.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>5</td>\n",
+       "      <td>Química</td>\n",
+       "      <td>10.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   level_0       index  Beltrano\n",
+       "0        0      Inglês       0.5\n",
+       "1        1   Português       2.0\n",
+       "2        2    História       3.0\n",
+       "3        3      Física       9.5\n",
+       "4        4  Matemática      10.0\n",
+       "5        5     Química      10.0"
+      ]
+     },
+     "execution_count": 100,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "notas_beltrano = notas_beltrano.reset_index()\n",
+    "notas_beltrano"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 101,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -2827,12 +3145,35 @@
     "id": "6wB1UztBjQMf",
     "outputId": "cbb15019-56a3-4c87-8b77-6e04371c3182"
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "6"
+      ]
+     },
+     "execution_count": 101,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "n = notas_beltrano.shape[0]\n",
+    "n"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 114,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "meio = int(n / 2) - 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 115,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -2843,11 +3184,14 @@
     "outputId": "499b28c7-6de7-40f4-cdd9-5fef5c5c084a"
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "elemento_md = notas_beltrano.iloc[meio]\n",
+    "elemento_md_mais_um = notas_beltrano.iloc[meio + 1]"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 116,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -2857,12 +3201,26 @@
     "id": "N-jSUjZSjQMi",
     "outputId": "1c265766-278c-4615-aec9-5c1f53cb2a25"
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "6.25"
+      ]
+     },
+     "execution_count": 116,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "Md = (elemento_md + elemento_md_mais_um) / 2\n",
+    "Md"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 117,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -2872,8 +3230,21 @@
     "id": "IevBBtrRjQMj",
     "outputId": "6f299f8c-f0c1-4e44-9a0f-cd72834145ba"
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "6.25"
+      ]
+     },
+     "execution_count": 117,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "notas_beltrano.median()"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -2887,7 +3258,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 85,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -2897,12 +3268,25 @@
     "id": "dJznpnjUjQMl",
     "outputId": "f4728447-b763-4116-9076-9ac9c4d19d75"
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1200.0"
+      ]
+     },
+     "execution_count": 85,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dados.Renda.median()"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 86,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -2912,8 +3296,21 @@
     "id": "W4a5PVYdjQMm",
     "outputId": "3e8a9233-4eb6-4684-9f96-ce79e53ffa7a"
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1200.0"
+      ]
+     },
+     "execution_count": 86,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dados.Renda.quantile()"
+   ]
   },
   {
    "cell_type": "markdown",
