cálculo da moda

--- a/notebook/curso-de-estatistica-parte-1.ipynb
+++ b/notebook/curso-de-estatistica-parte-1.ipynb
@@ -2351,7 +2351,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 120,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -2383,52 +2383,52 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th>Matérias</th>\n",
-       "      <th>Fulano</th>\n",
        "      <th>Beltrano</th>\n",
+       "      <th>Fulano</th>\n",
        "      <th>Sicrano</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>Matemática</th>\n",
-       "      <td>8</td>\n",
        "      <td>10.0</td>\n",
+       "      <td>8</td>\n",
        "      <td>7.5</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Português</th>\n",
-       "      <td>10</td>\n",
        "      <td>2.0</td>\n",
+       "      <td>10</td>\n",
        "      <td>8.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Inglês</th>\n",
-       "      <td>4</td>\n",
        "      <td>0.5</td>\n",
+       "      <td>4</td>\n",
        "      <td>7.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Geografia</th>\n",
-       "      <td>8</td>\n",
        "      <td>1.0</td>\n",
+       "      <td>8</td>\n",
        "      <td>8.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>História</th>\n",
-       "      <td>6</td>\n",
        "      <td>3.0</td>\n",
+       "      <td>6</td>\n",
        "      <td>8.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Física</th>\n",
-       "      <td>10</td>\n",
        "      <td>9.5</td>\n",
+       "      <td>10</td>\n",
        "      <td>8.5</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Química</th>\n",
-       "      <td>8</td>\n",
        "      <td>10.0</td>\n",
+       "      <td>8</td>\n",
        "      <td>7.0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -2436,24 +2436,24 @@
        "</div>"
       ],
       "text/plain": [
-       "Matérias    Fulano  Beltrano  Sicrano\n",
-       "Matemática       8      10.0      7.5\n",
-       "Português       10       2.0      8.0\n",
-       "Inglês           4       0.5      7.0\n",
-       "Geografia        8       1.0      8.0\n",
-       "História         6       3.0      8.0\n",
-       "Física          10       9.5      8.5\n",
-       "Química          8      10.0      7.0"
+       "Matérias    Beltrano  Fulano  Sicrano\n",
+       "Matemática      10.0       8      7.5\n",
+       "Português        2.0      10      8.0\n",
+       "Inglês           0.5       4      7.0\n",
+       "Geografia        1.0       8      8.0\n",
+       "História         3.0       6      8.0\n",
+       "Física           9.5      10      8.5\n",
+       "Química         10.0       8      7.0"
       ]
      },
-     "execution_count": 69,
+     "execution_count": 120,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df = pd.DataFrame(data = {'Fulano': [8, 10, 4, 8, 6, 10, 8],\n",
-    "                          'Beltrano': [10, 2, 0.5, 1, 3, 9.5, 10],\n",
+    "df = pd.DataFrame(data = {'Beltrano': [10, 2, 0.5, 1, 3, 9.5, 10],\n",
+    "                          'Fulano': [8, 10, 4, 8, 6, 10, 8],\n",
     "                          'Sicrano': [7.5, 8, 7, 8, 8, 8.5, 7]},\n",
     "                  index = ['Matemática',\n",
     "                           'Português',\n",
@@ -2471,7 +2471,6 @@
    "metadata": {
     "colab_type": "text",
     "id": "kcHJFW-YjQMP",
-    "jp-MarkdownHeadingCollapsed": true,
     "tags": []
    },
    "source": [
@@ -3327,7 +3326,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 121,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -3337,12 +3336,103 @@
     "id": "BHibMzw8X7Id",
     "outputId": "6b9375f3-1c22-4866-a40b-c28be3a01047"
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th>Matérias</th>\n",
+       "      <th>Beltrano</th>\n",
+       "      <th>Fulano</th>\n",
+       "      <th>Sicrano</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>Matemática</th>\n",
+       "      <td>10.0</td>\n",
+       "      <td>8</td>\n",
+       "      <td>7.5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Português</th>\n",
+       "      <td>2.0</td>\n",
+       "      <td>10</td>\n",
+       "      <td>8.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Inglês</th>\n",
+       "      <td>0.5</td>\n",
+       "      <td>4</td>\n",
+       "      <td>7.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Geografia</th>\n",
+       "      <td>1.0</td>\n",
+       "      <td>8</td>\n",
+       "      <td>8.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>História</th>\n",
+       "      <td>3.0</td>\n",
+       "      <td>6</td>\n",
+       "      <td>8.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Física</th>\n",
+       "      <td>9.5</td>\n",
+       "      <td>10</td>\n",
+       "      <td>8.5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Química</th>\n",
+       "      <td>10.0</td>\n",
+       "      <td>8</td>\n",
+       "      <td>7.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "Matérias    Beltrano  Fulano  Sicrano\n",
+       "Matemática      10.0       8      7.5\n",
+       "Português        2.0      10      8.0\n",
+       "Inglês           0.5       4      7.0\n",
+       "Geografia        1.0       8      8.0\n",
+       "História         3.0       6      8.0\n",
+       "Física           9.5      10      8.5\n",
+       "Química         10.0       8      7.0"
+      ]
+     },
+     "execution_count": 121,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 122,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -3352,12 +3442,61 @@
     "id": "xICDpQguX7Ik",
     "outputId": "7863773e-e0d3-4fa4-d565-deb63cf0e82b"
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th>Matérias</th>\n",
+       "      <th>Beltrano</th>\n",
+       "      <th>Fulano</th>\n",
+       "      <th>Sicrano</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>10.0</td>\n",
+       "      <td>8</td>\n",
+       "      <td>8.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "Matérias  Beltrano  Fulano  Sicrano\n",
+       "0             10.0       8      8.0"
+      ]
+     },
+     "execution_count": 122,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.mode()"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 125,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -3367,12 +3506,35 @@
     "id": "x9lIRFESX7Il",
     "outputId": "44945487-3723-422d-e720-57fd216be8e2"
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0    1\n",
+       "1    2\n",
+       "2    2\n",
+       "3    3\n",
+       "4    4\n",
+       "5    4\n",
+       "6    5\n",
+       "7    6\n",
+       "8    7\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 125,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "exemplo = pd.Series([1, 2, 2, 3, 4, 4, 5, 6, 7])\n",
+    "exemplo"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 124,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -3382,8 +3544,24 @@
     "id": "yUP6QFuiX7Io",
     "outputId": "4d51e179-bf46-4e35-dd06-f772e2fcab39"
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0    2\n",
+       "1    4\n",
+       "2    6\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 124,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "exemplo.mode()"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -3397,7 +3575,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 126,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -3407,12 +3585,26 @@
     "id": "mC8vvYk-jQMr",
     "outputId": "bb3e196d-2447-4596-917f-5bdf34067dd9"
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0    788\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 126,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dados.Renda.mode()"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 127,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -3422,8 +3614,30 @@
     "id": "Sdosy_vSX7Iw",
     "outputId": "949a3b5a-b978-40ab-eed0-872fb425d0f4"
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0    1.568128\n",
+       "1    1.671225\n",
+       "2    1.681659\n",
+       "3    1.692977\n",
+       "4    1.708163\n",
+       "5    1.708370\n",
+       "6    1.753842\n",
+       "7    1.779073\n",
+       "8    1.796462\n",
+       "dtype: float64"
+      ]
+     },
+     "execution_count": 127,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dados.Altura.mode()"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -3711,7 +3925,6 @@
    "metadata": {
     "colab_type": "text",
     "id": "vcaIo45UjQND",
-    "jp-MarkdownHeadingCollapsed": true,
     "tags": []
    },
    "source": [
