exercício sobre desvio médio absoluto

--- a/notebook/exercicios.ipynb
+++ b/notebook/exercicios.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -186,6 +186,183 @@
    ],
    "source": [
     "dataset.groupby(['Sexo']).mean().loc['H']"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "tags": []
+   },
+   "source": [
+    "## Comparando variáveis com mesma média e mediana"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th>Matérias</th>\n",
+       "      <th>Fulano</th>\n",
+       "      <th>Sicrano</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>Matemática</th>\n",
+       "      <td>8</td>\n",
+       "      <td>7.5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Português</th>\n",
+       "      <td>10</td>\n",
+       "      <td>8.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Inglês</th>\n",
+       "      <td>4</td>\n",
+       "      <td>7.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Geografia</th>\n",
+       "      <td>8</td>\n",
+       "      <td>8.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>História</th>\n",
+       "      <td>6</td>\n",
+       "      <td>8.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Física</th>\n",
+       "      <td>10</td>\n",
+       "      <td>8.5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Química</th>\n",
+       "      <td>8</td>\n",
+       "      <td>7.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "Matérias    Fulano  Sicrano\n",
+       "Matemática       8      7.5\n",
+       "Português       10      8.0\n",
+       "Inglês           4      7.0\n",
+       "Geografia        8      8.0\n",
+       "História         6      8.0\n",
+       "Física          10      8.5\n",
+       "Química          8      7.0"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df = pd.DataFrame(data = {'Fulano': [8, 10, 4, 8, 6, 10, 8],\n",
+    "                          'Sicrano': [7.5, 8, 7, 8, 8, 8.5, 7]}, \n",
+    "                  index = ['Matemática', \n",
+    "                           'Português', \n",
+    "                           'Inglês', \n",
+    "                           'Geografia', \n",
+    "                           'História', \n",
+    "                           'Física', \n",
+    "                           'Química'])\n",
+    "df.rename_axis('Matérias', axis = 'columns', inplace = True)\n",
+    "df"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "O DataFrame acima só considera as notas de Fulano e Sicrano que apresentaram medidas de tendência central idênticas.\n",
+    "\n",
+    "Indique a opção que mostra o aluno que possui a maior dispersão em suas notas e o valor do desvio médio absoluto deste aluno, respectivamente."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1.5510204081632648"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "desvio_medio_absoluto_fulano = df['Fulano'].mad()\n",
+    "desvio_medio_absoluto_fulano"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.4693877551020408"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "desvio_medio_absoluto_sicrano = df['Sicrano'].mad()\n",
+    "desvio_medio_absoluto_sicrano"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "O aluno com maior dispersão é Fulano. Seu desvio médio absoluto foi de 1.5510204081632648\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(f'O aluno com maior dispersão é Fulano. Seu desvio médio absoluto foi de {desvio_medio_absoluto_fulano}')"
    ]
   }
  ],
